tests/e2e/assignment_boolean.error
Error: syntax error in story at line 1, column 6

1|    true = ""
           ^

E0041: `=` is not allowed here
